@@ -124,6 +124,37 @@
 		  <version> 1.51.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+			<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
+		<dependency>
+		  <groupId>co.elastic.apm</groupId>
+		  <artifactId>elastic-apm-agent</artifactId>
+		  <version> 1.49.0</version> <!-- Or the latest version -->
+		</dependency>
+
+		<dependency>
+		  <groupId>io.micrometer</groupId>
+		  <artifactId>micrometer-core</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>io.micrometer</groupId>
+		  <artifactId>micrometer-registry-elastic</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -131,6 +162,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>22</source>
+					<target>22</target>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
